# rust-minimal-id

./: .rusty-hook.toml  Cargo.toml  README.md  release.toml  rustfmt.toml
.github/workflows/: rust.yml
benches/: benches.rs
src/: generator.rs  juniper_feature.rs  lib.rs  seed.rs  serde_feature.rs
