[package]
name = "minimal-id"
version = "0.8.1-alpha.0"
authors = ["Russell Hay <me@russellhay.com>"]
edition = "2018"
description = "A library that implements generating short, unique ids with minimal collisions and good locality"
repository = "https://github.com/RussTheAerialist/rust-minimal-id"
readme = "README.md"
keywords = [ "database", "identity", "url", "id", "unique" ]
categories = [ "data-structures", "development-tools", "web-programming" ]
license = "MIT"

[dependencies]
byteorder = "~1"
data-encoding = "~2"
rand = "~0"
juniper = { version="0.12.0", optional=true }
serde = { version="~1", optional = true }
serde_json = { version = "~1", optional = true }

[dev-dependencies]
rusty-hook = "~0"

[features]
default = []

graphql = [ "juniper" ]
json = [ "serde", "serde_json" ]

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true
